# chess_rocket

./: .gitignore  .mcp.json  CLAUDE.dev.md  CLAUDE.md  README.md  SKILL.md  chess-speedrun-prd.md  prd.json  prd.json.example  progress.txt  pyproject.toml  ralph.sh
.claude/: settings.local.json
.claude/hooks/: ralph-story-done.sh
documentation/: general_chess_speedrun_prd_documentation.md
mcp-server/: openings_tools.py  requirements.txt  response_schemas.py  server.py
puzzles/: back-rank.json  beginner-endgames.json  checkmate-patterns.json  forks.json  from-games.json  manifest.json  opening-moves.json  opening-traps.json  pins.json  skewers.json
references/: chess-pedagogy.md  common-mistakes.md  curriculum.md  elo-milestones.md  learning-science.md  opening-guide.md  tactical-patterns.md
scripts/: build_openings_db.py  dashboard.html  dashboard_server.py  engine.py  export.py  generate_opening_puzzles.py  generate_puzzles.py  generate_readme_graphics.py  import_lichess_puzzles.py  install.sh  models.py  motif_detector.py  openings.py  srs.py  tui.py  validate_puzzles.py
tests/: __init__.py  conftest.py  test_engine.py  test_mcp_flows.py  test_mcp_tools.py  test_motif_detector.py  test_openings.py  test_post_game.py  test_puzzle_generation.py  test_srs.py
